[gd_scene load_steps=5 format=3 uid="uid://bw5tpsuu6pa7i"]

[ext_resource type="Texture2D" uid="uid://dyqhvij2sow5y" path="res://assets/tiles.png" id="1_e00fl"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_mx1ga"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bgkgi"]
texture = ExtResource("1_e00fl")
texture_region_size = Vector2i(1, 1)
0:0/0 = 0
0:0/0/custom_data_0 = true
0:0/0/custom_data_1 = -1
0:1/0 = 0
0:2/0 = 0
0:2/0/custom_data_0 = true
0:2/0/custom_data_1 = 1
0:3/0 = 0
0:3/0/custom_data_0 = true
0:3/0/custom_data_1 = 2
0:4/0 = 0
0:4/0/custom_data_1 = 3

[sub_resource type="TileSet" id="TileSet_7xm1l"]
tile_size = Vector2i(1, 1)
custom_data_layer_0/name = "is_liquid"
custom_data_layer_0/type = 1
custom_data_layer_1/name = "weight"
custom_data_layer_1/type = 2
sources/0 = SubResource("TileSetAtlasSource_bgkgi")

[node name="Main" type="Node2D"]
script = ExtResource("1_mx1ga")

[node name="TileMap" type="TileMap" parent="."]
tile_set = SubResource("TileSet_7xm1l")
format = 2
layer_0/tile_data = PackedInt32Array(4456448, 0, 1, 4521984, 0, 1, 4587520, 0, 1, 4653056, 0, 1, 4456449, 0, 1, 4521985, 0, 1, 4587521, 0, 1, 4653057, 0, 1, 4456450, 0, 1, 4521986, 0, 1, 4587522, 0, 1, 4653058, 0, 1, 4456451, 0, 1, 4521987, 0, 1, 4587523, 0, 1, 4653059, 0, 1, 4456452, 0, 1, 4521988, 0, 1, 4587524, 0, 1, 4653060, 0, 1, 4456453, 0, 1, 4521989, 0, 1, 4587525, 0, 1, 4653061, 0, 1, 4456454, 0, 1, 4521990, 0, 1, 4587526, 0, 1, 4653062, 0, 1, 4456455, 0, 1, 4521991, 0, 1, 4587527, 0, 1, 4653063, 0, 1, 4456456, 0, 1, 4521992, 0, 1, 4587528, 0, 1, 4653064, 0, 1, 4456457, 0, 1, 4521993, 0, 1, 4587529, 0, 1, 4653065, 0, 1, 4456458, 0, 1, 4521994, 0, 1, 4587530, 0, 1, 4653066, 0, 1, 4456459, 0, 1, 4521995, 0, 1, 4587531, 0, 1, 4653067, 0, 1, 4456460, 0, 1, 4521996, 0, 1, 4587532, 0, 1, 4653068, 0, 1, 4456461, 0, 1, 4521997, 0, 1, 4587533, 0, 1, 4653069, 0, 1, 4456462, 0, 1, 4521998, 0, 1, 4587534, 0, 1, 4653070, 0, 1, 4456463, 0, 1, 4521999, 0, 1, 4587535, 0, 1, 4653071, 0, 1, 4456464, 0, 1, 4522000, 0, 1, 4587536, 0, 1, 4653072, 0, 1, 4456465, 0, 1, 4522001, 0, 1, 4587537, 0, 1, 4653073, 0, 1, 4456466, 0, 1, 4522002, 0, 1, 4587538, 0, 1, 4653074, 0, 1, 4456467, 0, 1, 4522003, 0, 1, 4587539, 0, 1, 4653075, 0, 1, 4456468, 0, 1, 4522004, 0, 1, 4587540, 0, 1, 4653076, 0, 1, 4456469, 0, 1, 4522005, 0, 1, 4587541, 0, 1, 4653077, 0, 1, 4456470, 0, 1, 4522006, 0, 1, 4587542, 0, 1, 4653078, 0, 1, 4456471, 0, 1, 4522007, 0, 1, 4587543, 0, 1, 4653079, 0, 1, 4456472, 0, 1, 4522008, 0, 1, 4587544, 0, 1, 4653080, 0, 1, 4456473, 0, 1, 4522009, 0, 1, 4587545, 0, 1, 4653081, 0, 1, 4456474, 0, 1, 4522010, 0, 1, 4587546, 0, 1, 4653082, 0, 1, 4456475, 0, 1, 4522011, 0, 1, 4587547, 0, 1, 4653083, 0, 1, 4456476, 0, 1, 4522012, 0, 1, 4587548, 0, 1, 4653084, 0, 1, 4456477, 0, 1, 4522013, 0, 1, 4587549, 0, 1, 4653085, 0, 1, 4456478, 0, 1, 4522014, 0, 1, 4587550, 0, 1, 4653086, 0, 1, 4456479, 0, 1, 4522015, 0, 1, 4587551, 0, 1, 4653087, 0, 1, 4456480, 0, 1, 4522016, 0, 1, 4587552, 0, 1, 4653088, 0, 1, 4456481, 0, 1, 4522017, 0, 1, 4587553, 0, 1, 4653089, 0, 1, 4456482, 0, 1, 4522018, 0, 1, 4587554, 0, 1, 4653090, 0, 1, 4456483, 0, 1, 4522019, 0, 1, 4587555, 0, 1, 4653091, 0, 1, 4456484, 0, 1, 4522020, 0, 1, 4587556, 0, 1, 4653092, 0, 1, 4456485, 0, 1, 4522021, 0, 1, 4587557, 0, 1, 4653093, 0, 1, 4456486, 0, 1, 4522022, 0, 1, 4587558, 0, 1, 4653094, 0, 1, 4456487, 0, 1, 4522023, 0, 1, 4587559, 0, 1, 4653095, 0, 1, 4456488, 0, 1, 4522024, 0, 1, 4587560, 0, 1, 4653096, 0, 1, 4456489, 0, 1, 4522025, 0, 1, 4587561, 0, 1, 4653097, 0, 1, 4456490, 0, 1, 4522026, 0, 1, 4587562, 0, 1, 4653098, 0, 1, 4456491, 0, 1, 4522027, 0, 1, 4587563, 0, 1, 4653099, 0, 1, 4456492, 0, 1, 4522028, 0, 1, 4587564, 0, 1, 4653100, 0, 1, 4456493, 0, 1, 4522029, 0, 1, 4587565, 0, 1, 4653101, 0, 1, 4456494, 0, 1, 4522030, 0, 1, 4587566, 0, 1, 4653102, 0, 1, 4456495, 0, 1, 4522031, 0, 1, 4587567, 0, 1, 4653103, 0, 1, 4456496, 0, 1, 4522032, 0, 1, 4587568, 0, 1, 4653104, 0, 1, 4456497, 0, 1, 4522033, 0, 1, 4587569, 0, 1, 4653105, 0, 1, 4456498, 0, 1, 4522034, 0, 1, 4587570, 0, 1, 4653106, 0, 1, 4456499, 0, 1, 4522035, 0, 1, 4587571, 0, 1, 4653107, 0, 1, 4456500, 0, 1, 4522036, 0, 1, 4587572, 0, 1, 4653108, 0, 1, 4456501, 0, 1, 4522037, 0, 1, 4587573, 0, 1, 4653109, 0, 1, 4522038, 0, 1, 4587574, 0, 1, 4653110, 0, 1, 4522039, 0, 1, 4587575, 0, 1, 4653111, 0, 1, 4522040, 0, 1, 4587576, 0, 1, 4653112, 0, 1, 4522041, 0, 1, 4587577, 0, 1, 4653113, 0, 1, 4522042, 0, 1, 4587578, 0, 1, 4653114, 0, 1, 4522043, 0, 1, 4587579, 0, 1, 4653115, 0, 1, 4522044, 0, 1, 4587580, 0, 1, 4653116, 0, 1, 4522045, 0, 1, 4587581, 0, 1, 4653117, 0, 1, 4522046, 0, 1, 4587582, 0, 1, 4653118, 0, 1, 4522047, 0, 1, 4587583, 0, 1, 4653119, 0, 1, 4522048, 0, 1, 4587584, 0, 1, 4653120, 0, 1, 4522049, 0, 1, 4587585, 0, 1, 4653121, 0, 1, 4522050, 0, 1, 4587586, 0, 1, 4653122, 0, 1, 4522051, 0, 1, 4587587, 0, 1, 4653123, 0, 1, 4522052, 0, 1, 4587588, 0, 1, 4653124, 0, 1, 4522053, 0, 1, 4587589, 0, 1, 4653125, 0, 1, 4522054, 0, 1, 4587590, 0, 1, 4653126, 0, 1, 4522055, 0, 1, 4587591, 0, 1, 4653127, 0, 1, 4522056, 0, 1, 4587592, 0, 1, 4653128, 0, 1, 4522057, 0, 1, 4587593, 0, 1, 4653129, 0, 1, 4522058, 0, 1, 4587594, 0, 1, 4653130, 0, 1, 4522059, 0, 1, 4587595, 0, 1, 4653131, 0, 1, 4522060, 0, 1, 4587596, 0, 1, 4653132, 0, 1, 4522061, 0, 1, 4587597, 0, 1, 4653133, 0, 1, 4522062, 0, 1, 4587598, 0, 1, 4653134, 0, 1, 4522063, 0, 1, 4587599, 0, 1, 4653135, 0, 1, 4522064, 0, 1, 4587600, 0, 1, 4653136, 0, 1, 4522065, 0, 1, 4587601, 0, 1, 4653137, 0, 1, 4522066, 0, 1, 4587602, 0, 1, 4653138, 0, 1, 4522067, 0, 1, 4587603, 0, 1, 4653139, 0, 1, 4522068, 0, 1, 4587604, 0, 1, 4653140, 0, 1, 4522069, 0, 1, 4587605, 0, 1, 4653141, 0, 1, 4522070, 0, 1, 4587606, 0, 1, 4653142, 0, 1, 4522071, 0, 1, 4587607, 0, 1, 4653143, 0, 1, 4522072, 0, 1, 4587608, 0, 1, 4653144, 0, 1, 4522073, 0, 1, 4587609, 0, 1, 4653145, 0, 1, 4522074, 0, 1, 4587610, 0, 1, 4653146, 0, 1, 4522075, 0, 1, 4587611, 0, 1, 4653147, 0, 1, 4522076, 0, 1, 4587612, 0, 1, 4653148, 0, 1, 4522077, 0, 1, 4587613, 0, 1, 4653149, 0, 1, 4456542, 0, 1, 4522078, 0, 1, 4587614, 0, 1, 4653150, 0, 1, 4456543, 0, 1, 4522079, 0, 1, 4587615, 0, 1, 4653151, 0, 1, 4456544, 0, 1, 4522080, 0, 1, 4587616, 0, 1, 4653152, 0, 1, 4456545, 0, 1, 4522081, 0, 1, 4587617, 0, 1, 4653153, 0, 1, 4456546, 0, 1, 4522082, 0, 1, 4587618, 0, 1, 4653154, 0, 1, 4456547, 0, 1, 4522083, 0, 1, 4587619, 0, 1, 4653155, 0, 1, 4456548, 0, 1, 4522084, 0, 1, 4587620, 0, 1, 4653156, 0, 1, 4456549, 0, 1, 4522085, 0, 1, 4587621, 0, 1, 4653157, 0, 1, 4456550, 0, 1, 4522086, 0, 1, 4587622, 0, 1, 4653158, 0, 1, 4456551, 0, 1, 4522087, 0, 1, 4587623, 0, 1, 4653159, 0, 1, 4456552, 0, 1, 4522088, 0, 1, 4587624, 0, 1, 4653160, 0, 1, 4456553, 0, 1, 4522089, 0, 1, 4587625, 0, 1, 4653161, 0, 1, 4456554, 0, 1, 4522090, 0, 1, 4587626, 0, 1, 4653162, 0, 1, 4456555, 0, 1, 4522091, 0, 1, 4587627, 0, 1, 4653163, 0, 1, 4456556, 0, 1, 4522092, 0, 1, 4587628, 0, 1, 4653164, 0, 1, 4456557, 0, 1, 4522093, 0, 1, 4587629, 0, 1, 4653165, 0, 1, 4456558, 0, 1, 4522094, 0, 1, 4587630, 0, 1, 4653166, 0, 1, 4456559, 0, 1, 4522095, 0, 1, 4587631, 0, 1, 4653167, 0, 1, 4456560, 0, 1, 4522096, 0, 1, 4587632, 0, 1, 4653168, 0, 1, 4456561, 0, 1, 4522097, 0, 1, 4587633, 0, 1, 4653169, 0, 1, 4456562, 0, 1, 4522098, 0, 1, 4587634, 0, 1, 4653170, 0, 1, 4456563, 0, 1, 4522099, 0, 1, 4587635, 0, 1, 4653171, 0, 1, 4456564, 0, 1, 4522100, 0, 1, 4587636, 0, 1, 4653172, 0, 1, 4456565, 0, 1, 4522101, 0, 1, 4587637, 0, 1, 4653173, 0, 1, 4456566, 0, 1, 4522102, 0, 1, 4587638, 0, 1, 4653174, 0, 1, 4456567, 0, 1, 4522103, 0, 1, 4587639, 0, 1, 4653175, 0, 1, 4456568, 0, 1, 4522104, 0, 1, 4587640, 0, 1, 4653176, 0, 1, 4456569, 0, 1, 4522105, 0, 1, 4587641, 0, 1, 4653177, 0, 1, 4456570, 0, 1, 4522106, 0, 1, 4587642, 0, 1, 4653178, 0, 1, 4456571, 0, 1, 4522107, 0, 1, 4587643, 0, 1, 4653179, 0, 1, 4456572, 0, 1, 4522108, 0, 1, 4587644, 0, 1, 4653180, 0, 1, 4456573, 0, 1, 4522109, 0, 1, 4587645, 0, 1, 4653181, 0, 1, 4456574, 0, 1, 4522110, 0, 1, 4587646, 0, 1, 4653182, 0, 1, 4456575, 0, 1, 4522111, 0, 1, 4587647, 0, 1, 4653183, 0, 1, 125, 0, 1, 65661, 0, 1, 131197, 0, 1, 196733, 0, 1, 262269, 0, 1, 327805, 0, 1, 393341, 0, 1, 458877, 0, 1, 524413, 0, 1, 589949, 0, 1, 655485, 0, 1, 721021, 0, 1, 786557, 0, 1, 852093, 0, 1, 917629, 0, 1, 983165, 0, 1, 1048701, 0, 1, 1114237, 0, 1, 1179773, 0, 1, 1245309, 0, 1, 1310845, 0, 1, 1376381, 0, 1, 1441917, 0, 1, 1507453, 0, 1, 1572989, 0, 1, 1638525, 0, 1, 1704061, 0, 1, 1769597, 0, 1, 1835133, 0, 1, 1900669, 0, 1, 1966205, 0, 1, 2031741, 0, 1, 2097277, 0, 1, 2162813, 0, 1, 2228349, 0, 1, 2293885, 0, 1, 2359421, 0, 1, 2424957, 0, 1, 2490493, 0, 1, 2556029, 0, 1, 2621565, 0, 1, 2687101, 0, 1, 2752637, 0, 1, 2818173, 0, 1, 2883709, 0, 1, 2949245, 0, 1, 3014781, 0, 1, 3080317, 0, 1, 3145853, 0, 1, 3211389, 0, 1, 3276925, 0, 1, 3342461, 0, 1, 3407997, 0, 1, 3473533, 0, 1, 3539069, 0, 1, 3604605, 0, 1, 3670141, 0, 1, 3735677, 0, 1, 3801213, 0, 1, 3866749, 0, 1, 3932285, 0, 1, 3997821, 0, 1, 4063357, 0, 1, 4128893, 0, 1, 4194429, 0, 1, 4259965, 0, 1, 4325501, 0, 1, 4391037, 0, 1, 126, 0, 1, 65662, 0, 1, 131198, 0, 1, 196734, 0, 1, 262270, 0, 1, 327806, 0, 1, 393342, 0, 1, 458878, 0, 1, 524414, 0, 1, 589950, 0, 1, 655486, 0, 1, 721022, 0, 1, 786558, 0, 1, 852094, 0, 1, 917630, 0, 1, 983166, 0, 1, 1048702, 0, 1, 1114238, 0, 1, 1179774, 0, 1, 1245310, 0, 1, 1310846, 0, 1, 1376382, 0, 1, 1441918, 0, 1, 1507454, 0, 1, 1572990, 0, 1, 1638526, 0, 1, 1704062, 0, 1, 1769598, 0, 1, 1835134, 0, 1, 1900670, 0, 1, 1966206, 0, 1, 2031742, 0, 1, 2097278, 0, 1, 2162814, 0, 1, 2228350, 0, 1, 2293886, 0, 1, 2359422, 0, 1, 2424958, 0, 1, 2490494, 0, 1, 2556030, 0, 1, 2621566, 0, 1, 2687102, 0, 1, 2752638, 0, 1, 2818174, 0, 1, 2883710, 0, 1, 2949246, 0, 1, 3014782, 0, 1, 3080318, 0, 1, 3145854, 0, 1, 3211390, 0, 1, 3276926, 0, 1, 3342462, 0, 1, 3407998, 0, 1, 3473534, 0, 1, 3539070, 0, 1, 3604606, 0, 1, 3670142, 0, 1, 3735678, 0, 1, 3801214, 0, 1, 3866750, 0, 1, 3932286, 0, 1, 3997822, 0, 1, 4063358, 0, 1, 4128894, 0, 1, 4194430, 0, 1, 4259966, 0, 1, 4325502, 0, 1, 4391038, 0, 1, 127, 0, 1, 65663, 0, 1, 131199, 0, 1, 196735, 0, 1, 262271, 0, 1, 327807, 0, 1, 393343, 0, 1, 458879, 0, 1, 524415, 0, 1, 589951, 0, 1, 655487, 0, 1, 721023, 0, 1, 786559, 0, 1, 852095, 0, 1, 917631, 0, 1, 983167, 0, 1, 1048703, 0, 1, 1114239, 0, 1, 1179775, 0, 1, 1245311, 0, 1, 1310847, 0, 1, 1376383, 0, 1, 1441919, 0, 1, 1507455, 0, 1, 1572991, 0, 1, 1638527, 0, 1, 1704063, 0, 1, 1769599, 0, 1, 1835135, 0, 1, 1900671, 0, 1, 1966207, 0, 1, 2031743, 0, 1, 2097279, 0, 1, 2162815, 0, 1, 2228351, 0, 1, 2293887, 0, 1, 2359423, 0, 1, 2424959, 0, 1, 2490495, 0, 1, 2556031, 0, 1, 2621567, 0, 1, 2687103, 0, 1, 2752639, 0, 1, 2818175, 0, 1, 2883711, 0, 1, 2949247, 0, 1, 3014783, 0, 1, 3080319, 0, 1, 3145855, 0, 1, 3211391, 0, 1, 3276927, 0, 1, 3342463, 0, 1, 3407999, 0, 1, 3473535, 0, 1, 3539071, 0, 1, 3604607, 0, 1, 3670143, 0, 1, 3735679, 0, 1, 3801215, 0, 1, 3866751, 0, 1, 3932287, 0, 1, 3997823, 0, 1, 4063359, 0, 1, 4128895, 0, 1, 4194431, 0, 1, 4259967, 0, 1, 4325503, 0, 1, 4391039, 0, 1, 0, 0, 1, 65536, 0, 1, 131072, 0, 1, 196608, 0, 1, 262144, 0, 1, 327680, 0, 1, 393216, 0, 1, 458752, 0, 1, 524288, 0, 1, 589824, 0, 1, 655360, 0, 1, 720896, 0, 1, 786432, 0, 1, 851968, 0, 1, 917504, 0, 1, 983040, 0, 1, 1048576, 0, 1, 1114112, 0, 1, 1179648, 0, 1, 1245184, 0, 1, 1310720, 0, 1, 1376256, 0, 1, 1441792, 0, 1, 1507328, 0, 1, 1572864, 0, 1, 1638400, 0, 1, 1703936, 0, 1, 1769472, 0, 1, 1835008, 0, 1, 1900544, 0, 1, 1966080, 0, 1, 2031616, 0, 1, 2097152, 0, 1, 2162688, 0, 1, 2228224, 0, 1, 2293760, 0, 1, 2359296, 0, 1, 2424832, 0, 1, 2490368, 0, 1, 2555904, 0, 1, 2621440, 0, 1, 2686976, 0, 1, 2752512, 0, 1, 2818048, 0, 1, 2883584, 0, 1, 2949120, 0, 1, 3014656, 0, 1, 3080192, 0, 1, 3145728, 0, 1, 3211264, 0, 1, 3276800, 0, 1, 3342336, 0, 1, 3407872, 0, 1, 3473408, 0, 1, 3538944, 0, 1, 3604480, 0, 1, 3670016, 0, 1, 3735552, 0, 1, 3801088, 0, 1, 3866624, 0, 1, 3932160, 0, 1, 3997696, 0, 1, 4063232, 0, 1, 4128768, 0, 1, 4194304, 0, 1, 4259840, 0, 1, 4325376, 0, 1, 4390912, 0, 1, 1, 0, 1, 65537, 0, 1, 131073, 0, 1, 196609, 0, 1, 262145, 0, 1, 327681, 0, 1, 393217, 0, 1, 458753, 0, 1, 524289, 0, 1, 589825, 0, 1, 655361, 0, 1, 720897, 0, 1, 786433, 0, 1, 851969, 0, 1, 917505, 0, 1, 983041, 0, 1, 1048577, 0, 1, 1114113, 0, 1, 1179649, 0, 1, 1245185, 0, 1, 1310721, 0, 1, 1376257, 0, 1, 1441793, 0, 1, 1507329, 0, 1, 1572865, 0, 1, 1638401, 0, 1, 1703937, 0, 1, 1769473, 0, 1, 1835009, 0, 1, 1900545, 0, 1, 1966081, 0, 1, 2031617, 0, 1, 2097153, 0, 1, 2162689, 0, 1, 2228225, 0, 1, 2293761, 0, 1, 2359297, 0, 1, 2424833, 0, 1, 2490369, 0, 1, 2555905, 0, 1, 2621441, 0, 1, 2686977, 0, 1, 2752513, 0, 1, 2818049, 0, 1, 2883585, 0, 1, 2949121, 0, 1, 3014657, 0, 1, 3080193, 0, 1, 3145729, 0, 1, 3211265, 0, 1, 3276801, 0, 1, 3342337, 0, 1, 3407873, 0, 1, 3473409, 0, 1, 3538945, 0, 1, 3604481, 0, 1, 3670017, 0, 1, 3735553, 0, 1, 3801089, 0, 1, 3866625, 0, 1, 3932161, 0, 1, 3997697, 0, 1, 4063233, 0, 1, 4128769, 0, 1, 4194305, 0, 1, 4259841, 0, 1, 4325377, 0, 1, 4390913, 0, 1, 2, 0, 1, 65538, 0, 1, 131074, 0, 1, 196610, 0, 1, 262146, 0, 1, 327682, 0, 1, 393218, 0, 1, 458754, 0, 1, 524290, 0, 1, 589826, 0, 1, 655362, 0, 1, 720898, 0, 1, 786434, 0, 1, 851970, 0, 1, 917506, 0, 1, 983042, 0, 1, 1048578, 0, 1, 1114114, 0, 1, 1179650, 0, 1, 1245186, 0, 1, 1310722, 0, 1, 1376258, 0, 1, 1441794, 0, 1, 1507330, 0, 1, 1572866, 0, 1, 1638402, 0, 1, 1703938, 0, 1, 1769474, 0, 1, 1835010, 0, 1, 1900546, 0, 1, 1966082, 0, 1, 2031618, 0, 1, 2097154, 0, 1, 2162690, 0, 1, 2228226, 0, 1, 2293762, 0, 1, 2359298, 0, 1, 2424834, 0, 1, 2490370, 0, 1, 2555906, 0, 1, 2621442, 0, 1, 2686978, 0, 1, 2752514, 0, 1, 2818050, 0, 1, 2883586, 0, 1, 2949122, 0, 1, 3014658, 0, 1, 3080194, 0, 1, 3145730, 0, 1, 3211266, 0, 1, 3276802, 0, 1, 3342338, 0, 1, 3407874, 0, 1, 3473410, 0, 1, 3538946, 0, 1, 3604482, 0, 1, 3670018, 0, 1, 3735554, 0, 1, 3801090, 0, 1, 3866626, 0, 1, 3932162, 0, 1, 3997698, 0, 1, 4063234, 0, 1, 4128770, 0, 1, 4194306, 0, 1, 4259842, 0, 1, 4325378, 0, 1, 4390914, 0, 1, 3, 0, 1, 65539, 0, 1, 4, 0, 1, 65540, 0, 1, 5, 0, 1, 65541, 0, 1, 6, 0, 1, 65542, 0, 1, 7, 0, 1, 65543, 0, 1, 8, 0, 1, 65544, 0, 1, 9, 0, 1, 65545, 0, 1, 10, 0, 1, 65546, 0, 1, 11, 0, 1, 65547, 0, 1, 12, 0, 1, 65548, 0, 1, 13, 0, 1, 65549, 0, 1, 14, 0, 1, 65550, 0, 1, 15, 0, 1, 65551, 0, 1, 16, 0, 1, 65552, 0, 1, 17, 0, 1, 65553, 0, 1, 18, 0, 1, 65554, 0, 1, 19, 0, 1, 65555, 0, 1, 20, 0, 1, 65556, 0, 1, 21, 0, 1, 65557, 0, 1, 22, 0, 1, 65558, 0, 1, 23, 0, 1, 65559, 0, 1, 24, 0, 1, 65560, 0, 1, 25, 0, 1, 65561, 0, 1, 26, 0, 1, 65562, 0, 1, 27, 0, 1, 65563, 0, 1, 28, 0, 1, 65564, 0, 1, 29, 0, 1, 65565, 0, 1, 30, 0, 1, 65566, 0, 1, 31, 0, 1, 65567, 0, 1, 32, 0, 1, 65568, 0, 1, 33, 0, 1, 65569, 0, 1, 34, 0, 1, 65570, 0, 1, 35, 0, 1, 65571, 0, 1, 36, 0, 1, 65572, 0, 1, 37, 0, 1, 65573, 0, 1, 38, 0, 1, 65574, 0, 1, 39, 0, 1, 65575, 0, 1, 40, 0, 1, 65576, 0, 1, 41, 0, 1, 65577, 0, 1, 42, 0, 1, 65578, 0, 1, 43, 0, 1, 65579, 0, 1, 44, 0, 1, 65580, 0, 1, 45, 0, 1, 65581, 0, 1, 46, 0, 1, 65582, 0, 1, 47, 0, 1, 65583, 0, 1, 48, 0, 1, 65584, 0, 1, 49, 0, 1, 65585, 0, 1, 50, 0, 1, 65586, 0, 1, 51, 0, 1, 65587, 0, 1, 52, 0, 1, 65588, 0, 1, 53, 0, 1, 65589, 0, 1, 54, 0, 1, 65590, 0, 1, 55, 0, 1, 65591, 0, 1, 56, 0, 1, 65592, 0, 1, 57, 0, 1, 65593, 0, 1, 58, 0, 1, 65594, 0, 1, 59, 0, 1, 65595, 0, 1, 60, 0, 1, 65596, 0, 1, 61, 0, 1, 65597, 0, 1, 62, 0, 1, 65598, 0, 1, 63, 0, 1, 65599, 0, 1, 64, 0, 1, 65600, 0, 1, 65, 0, 1, 65601, 0, 1, 66, 0, 1, 65602, 0, 1, 67, 0, 1, 65603, 0, 1, 68, 0, 1, 65604, 0, 1, 69, 0, 1, 65605, 0, 1, 70, 0, 1, 65606, 0, 1, 71, 0, 1, 65607, 0, 1, 72, 0, 1, 65608, 0, 1, 73, 0, 1, 65609, 0, 1, 74, 0, 1, 65610, 0, 1, 75, 0, 1, 65611, 0, 1, 76, 0, 1, 65612, 0, 1, 77, 0, 1, 65613, 0, 1, 78, 0, 1, 65614, 0, 1, 79, 0, 1, 65615, 0, 1, 80, 0, 1, 65616, 0, 1, 81, 0, 1, 65617, 0, 1, 82, 0, 1, 65618, 0, 1, 83, 0, 1, 65619, 0, 1, 84, 0, 1, 65620, 0, 1, 85, 0, 1, 65621, 0, 1, 86, 0, 1, 65622, 0, 1, 87, 0, 1, 65623, 0, 1, 88, 0, 1, 65624, 0, 1, 89, 0, 1, 65625, 0, 1, 90, 0, 1, 65626, 0, 1, 91, 0, 1, 65627, 0, 1, 92, 0, 1, 65628, 0, 1, 93, 0, 1, 65629, 0, 1, 94, 0, 1, 65630, 0, 1, 95, 0, 1, 65631, 0, 1, 96, 0, 1, 65632, 0, 1, 97, 0, 1, 65633, 0, 1, 98, 0, 1, 65634, 0, 1, 99, 0, 1, 65635, 0, 1, 100, 0, 1, 65636, 0, 1, 101, 0, 1, 65637, 0, 1, 102, 0, 1, 65638, 0, 1, 103, 0, 1, 65639, 0, 1, 104, 0, 1, 65640, 0, 1, 105, 0, 1, 65641, 0, 1, 106, 0, 1, 65642, 0, 1, 107, 0, 1, 65643, 0, 1, 108, 0, 1, 65644, 0, 1, 109, 0, 1, 65645, 0, 1, 110, 0, 1, 65646, 0, 1, 111, 0, 1, 65647, 0, 1, 112, 0, 1, 65648, 0, 1, 113, 0, 1, 65649, 0, 1, 114, 0, 1, 65650, 0, 1, 115, 0, 1, 65651, 0, 1, 116, 0, 1, 65652, 0, 1, 117, 0, 1, 65653, 0, 1, 118, 0, 1, 65654, 0, 1, 119, 0, 1, 65655, 0, 1, 120, 0, 1, 65656, 0, 1, 121, 0, 1, 65657, 0, 1, 122, 0, 1, 65658, 0, 1, 123, 0, 1, 65659, 0, 1, 124, 0, 1, 65660, 0, 1, 131075, 0, 1, 131076, 0, 1, 131077, 0, 1, 131078, 0, 1, 131079, 0, 1, 131080, 0, 1, 131081, 0, 1, 131082, 0, 1, 131083, 0, 1, 131084, 0, 1, 131085, 0, 1, 131086, 0, 1, 131087, 0, 1, 131088, 0, 1, 131089, 0, 1, 131090, 0, 1, 131091, 0, 1, 131092, 0, 1, 131093, 0, 1, 131094, 0, 1, 131095, 0, 1, 131096, 0, 1, 131097, 0, 1, 131098, 0, 1, 131099, 0, 1, 131100, 0, 1, 131101, 0, 1, 131102, 0, 1, 131103, 0, 1, 131104, 0, 1, 131105, 0, 1, 131106, 0, 1, 131107, 0, 1, 131108, 0, 1, 131109, 0, 1, 131110, 0, 1, 131111, 0, 1, 131112, 0, 1, 131113, 0, 1, 131114, 0, 1, 131115, 0, 1, 131116, 0, 1, 131117, 0, 1, 131118, 0, 1, 131119, 0, 1, 131120, 0, 1, 131121, 0, 1, 131122, 0, 1, 131123, 0, 1, 131124, 0, 1, 131125, 0, 1, 131126, 0, 1, 131127, 0, 1, 131128, 0, 1, 131129, 0, 1, 131130, 0, 1, 131131, 0, 1, 131132, 0, 1, 131133, 0, 1, 131134, 0, 1, 131135, 0, 1, 131136, 0, 1, 131137, 0, 1, 131138, 0, 1, 131139, 0, 1, 131140, 0, 1, 131141, 0, 1, 131142, 0, 1, 131143, 0, 1, 131144, 0, 1, 131145, 0, 1, 131146, 0, 1, 131147, 0, 1, 131148, 0, 1, 131149, 0, 1, 131150, 0, 1, 131151, 0, 1, 131152, 0, 1, 131153, 0, 1, 131154, 0, 1, 131155, 0, 1, 131156, 0, 1, 131157, 0, 1, 131158, 0, 1, 131159, 0, 1, 131160, 0, 1, 131161, 0, 1, 131162, 0, 1, 131163, 0, 1, 131164, 0, 1, 131165, 0, 1, 131166, 0, 1, 131167, 0, 1, 131168, 0, 1, 131169, 0, 1, 131170, 0, 1, 131171, 0, 1, 131172, 0, 1, 131173, 0, 1, 131174, 0, 1, 131175, 0, 1, 131176, 0, 1, 131177, 0, 1, 131178, 0, 1, 131179, 0, 1, 131180, 0, 1, 131181, 0, 1, 131182, 0, 1, 131183, 0, 1, 131184, 0, 1, 131185, 0, 1, 131186, 0, 1, 131187, 0, 1, 131188, 0, 1, 131189, 0, 1, 131190, 0, 1, 131191, 0, 1, 131192, 0, 1, 131193, 0, 1, 131194, 0, 1, 131195, 0, 1, 131196, 0, 1, 4456502, 0, 1, 4456503, 0, 1, 4456504, 0, 1, 4456505, 0, 1, 4456506, 0, 1, 4456507, 0, 1, 4456508, 0, 1, 4456509, 0, 1, 4456510, 0, 1, 4456511, 0, 1, 4456512, 0, 1, 4456513, 0, 1, 4456514, 0, 1, 4456515, 0, 1, 4456516, 0, 1, 4456517, 0, 1, 4456518, 0, 1, 4456519, 0, 1, 4456520, 0, 1, 4456521, 0, 1, 4456522, 0, 1, 4456523, 0, 1, 4456524, 0, 1, 4456525, 0, 1, 4456526, 0, 1, 4456527, 0, 1, 4456528, 0, 1, 4456529, 0, 1, 4456530, 0, 1, 4456531, 0, 1, 4456532, 0, 1, 4456533, 0, 1, 4456534, 0, 1, 4456535, 0, 1, 4456536, 0, 1, 4456537, 0, 1, 4456538, 0, 1, 4456539, 0, 1, 4456540, 0, 1, 4456541, 0, 1, 4390991, 0, 1, 4325455, 0, 1, 4259919, 0, 1, 4194383, 0, 1, 4128847, 0, 1, 4063311, 0, 1, 3997775, 0, 1, 3932239, 0, 1, 3866703, 0, 1, 3801167, 0, 1, 3735631, 0, 1, 3670095, 0, 1, 3604559, 0, 1, 3539023, 0, 1, 3473487, 0, 1, 3407951, 0, 1, 3342415, 0, 1, 3276879, 0, 1, 3211343, 0, 1, 3145807, 0, 1, 4390971, 0, 1, 4325435, 0, 1, 4259899, 0, 1, 4194363, 0, 1, 4128827, 0, 1, 4063291, 0, 1, 3997755, 0, 1, 3932219, 0, 1, 3866683, 0, 1, 3801147, 0, 1, 3735611, 0, 1, 3670075, 0, 1, 3604539, 0, 1, 3539003, 0, 1, 3473467, 0, 1, 3407931, 0, 1, 3342395, 0, 1, 3276859, 0, 1, 3211323, 0, 1, 3145787, 0, 1, 3145786, 0, 1, 3211322, 0, 1, 3276858, 0, 1, 3342394, 0, 1, 3407930, 0, 1, 3473466, 0, 1, 3539002, 0, 1, 3604538, 0, 1, 3670074, 0, 1, 3735610, 0, 1, 3801146, 0, 1, 3866682, 0, 1, 3932218, 0, 1, 3997754, 0, 1, 4063290, 0, 1, 4128826, 0, 1, 4194362, 0, 1, 4259898, 0, 1, 4325434, 0, 1, 4390970, 0, 1, 3145808, 0, 1, 3211344, 0, 1, 3276880, 0, 1, 3342416, 0, 1, 3407952, 0, 1, 3473488, 0, 1, 3539024, 0, 1, 3604560, 0, 1, 3670096, 0, 1, 3735632, 0, 1, 3801168, 0, 1, 3866704, 0, 1, 3932240, 0, 1, 3997776, 0, 1, 4063312, 0, 1, 4128848, 0, 1, 4194384, 0, 1, 4259920, 0, 1, 4325456, 0, 1, 4390992, 0, 1, 2031717, 0, 1, 2031718, 0, 1, 2031719, 0, 1, 2031720, 0, 1, 2031721, 0, 1, 2031722, 0, 1, 2031723, 0, 1, 2424938, 0, 1, 2424939, 0, 1, 2424940, 0, 1, 2424941, 0, 1, 2424942, 0, 1, 2424943, 0, 1, 2424944, 0, 1, 2424945, 0, 1, 2424934, 0, 1, 2424933, 0, 1, 2424932, 0, 1, 2424931, 0, 1, 2424930, 0, 1, 2424929, 0, 1, 2424928, 0, 1, 2818149, 0, 1, 2818150, 0, 1, 2818151, 0, 1, 2818152, 0, 1, 2818153, 0, 1, 2818154, 0, 1, 2818155, 0, 1, 2818142, 0, 1, 2818143, 0, 1, 2818144, 0, 1, 2818145, 0, 1, 2818146, 0, 1, 2818147, 0, 1, 2818160, 0, 1, 2818161, 0, 1, 2818162, 0, 1, 2818163, 0, 1, 2818164, 0, 1, 2818158, 0, 1, 2818159, 0, 1, 2818138, 0, 1, 2883674, 0, 1, 2949210, 0, 1, 3014746, 0, 1, 3080282, 0, 1, 3145818, 0, 1, 3211354, 0, 1, 3276890, 0, 1, 3342426, 0, 1, 3342427, 0, 1, 3342428, 0, 1, 3342429, 0, 1, 3342430, 0, 1, 3342431, 0, 1, 3342432, 0, 1, 3342433, 0, 1, 3342434, 0, 1, 3342435, 0, 1, 3342436, 0, 1, 3342437, 0, 1, 3342438, 0, 1, 3342439, 0, 1, 3342440, 0, 1, 3342441, 0, 1, 3342442, 0, 1, 3342443, 0, 1, 3342444, 0, 1, 3342445, 0, 1, 3342446, 0, 1, 3342447, 0, 1, 3342448, 0, 1, 3342449, 0, 1, 3342450, 0, 1, 3342451, 0, 1, 3342452, 0, 1, 3342453, 0, 1, 3342454, 0, 1, 3342455, 0, 1, 3342456, 0, 1, 3342457, 0, 1, 3276921, 0, 1, 3211385, 0, 1, 3145849, 0, 1, 3080313, 0, 1, 3014777, 0, 1, 2949241, 0, 1, 2883705, 0, 1, 2818169, 0, 1, 3080296, 0, 1, 3145832, 0, 1, 3211368, 0, 1, 3276904, 0, 1)
layer_1/modulate = Color(1, 1, 1, 0)
layer_1/tile_data = PackedInt32Array()

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="GUI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="GUI"]
offset_left = 3.0
offset_top = 3.0
offset_right = 22.0
offset_bottom = 15.0
size_flags_vertical = 3

[node name="SandLabel" type="Label" parent="GUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 2
text = "Sand: x"

[node name="WaterLabel" type="Label" parent="GUI/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_font_sizes/font_size = 2
text = "Water:"

[node name="FPS" type="Label" parent="GUI"]
offset_left = 92.0
offset_top = 3.0
offset_right = 132.0
offset_bottom = 26.0
theme_override_font_sizes/font_size = 2

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
